# deepcast-post

./: .gitignore  COST_GUIDE.md  Makefile  README.md  SETUP.md  TESTING.md  create_global_wrapper.sh  env.example  install.sh  pyproject.toml  setup.py
deepcast_post/: __init__.py  cli.py  core.py
tests/: conftest.py  test_cli.py  test_core.py  test_integration.py
