[tool.poetry]
name = "deepcast-post"
version = "0.1.0"
description = "A CLI tool for generating deepcast breakdowns from diarized transcripts using OpenAI API."
authors = ["Evan Hourigan"]
license = "MIT"
readme = "README.md"
packages = [{ include = "deepcast_post" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
openai = "^1.0.0"
python-dotenv = "^1.0.0"
rich = "^13.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[tool.poetry.scripts]
deepcast = "deepcast_post.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--verbose --tb=short --strict-markers --disable-warnings --cov=deepcast_post --cov-report=term-missing --cov-report=html:htmlcov --cov-report=xml"
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
  "unit: marks tests as unit tests",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 